syntax = "proto3";

package micro;

service MicroService {
    rpc CreateMicro (CreateMicroRequest) returns (CreateMicroResponse) {}

    rpc GetMicroById (GetMicroByIdRequest) returns (GetMicroByIdResponse) {}

    rpc GetMicroList (GetMicroListRequest) returns (GetMicroListResponse) {}

    rpc GetMicroListByStream (stream GetMicroListByStreamRequest) returns (stream GetMicroListByStreamResponse);
}

message CreateMicroRequest {
    string name = 1;
    int32 typ = 2;
}

message CreateMicroResponse {
    int32 code = 1;
    string msg = 2;
}

message GetMicroByIdRequest {
    uint32 id = 1;
}

message GetMicroByIdResponse {
    int32 code = 1;
    string msg = 2;
    Micro data = 3;
}

message Micro {
    uint32 id = 1;
    string name = 2;
    uint32 view_num = 3;
    int32 typ = 4;
    string create_datetime = 5;
    string update_datetime = 6;
}

message MicroList {
    int32 total = 1;
    int32 total_page = 2;
    int32 cur_page = 3;
    repeated Micro datalist = 4;
}

message GetMicroListRequest {
    int32 typ = 1;
    int32 page_size = 2;
    int32 page_num = 3;
    bool is_desc = 4;
}

message GetMicroListResponse {
    int32 code = 1;
    string msg = 2;
    MicroList data = 3;
}

message GetMicroListByStreamRequest {
    uint32 index = 1;
    uint32 id = 2;
}

message GetMicroListByStreamResponse {
    uint32 index = 1;
    Micro result = 2;
}
